--- a/Курсач2.0/chapter2.tex
+++ b/Курсач2.0/chapter2.tex
@@ -1,78 +1,78 @@
-\chapter{Задача оптимального экономического роста}\label{chap2}
+\chapter{Р—Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р°}\label{chap2}
 
 
-В данной главе исследуется задача оптимального экономического роста в неоклассической модели с логарифмической функцией мгновенной полезности.  Эти задачи представляют интерес в связи с тем, что они могут выбираться в качестве прогнозирующих задач оптимального управления при применении теории главы 1 для решения задачи роста.
+Р’ РґР°РЅРЅРѕР№ РіР»Р°РІРµ РёСЃСЃР»РµРґСѓРµС‚СЃСЏ Р·Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° РІ РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРѕР№ РјРѕРґРµР»Рё СЃ Р»РѕРіР°СЂРёС„РјРёС‡РµСЃРєРѕР№ С„СѓРЅРєС†РёРµР№ РјРіРЅРѕРІРµРЅРЅРѕР№ РїРѕР»РµР·РЅРѕСЃС‚Рё.  Р­С‚Рё Р·Р°РґР°С‡Рё РїСЂРµРґСЃС‚Р°РІР»СЏСЋС‚ РёРЅС‚РµСЂРµСЃ РІ СЃРІСЏР·Рё СЃ С‚РµРј, С‡С‚Рѕ РѕРЅРё РјРѕРіСѓС‚ РІС‹Р±РёСЂР°С‚СЊСЃСЏ РІ РєР°С‡РµСЃС‚РІРµ РїСЂРѕРіРЅРѕР·РёСЂСѓСЋС‰РёС… Р·Р°РґР°С‡ РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ РїСЂРё РїСЂРёРјРµРЅРµРЅРёРё С‚РµРѕСЂРёРё РіР»Р°РІС‹ 1 РґР»СЏ СЂРµС€РµРЅРёСЏ Р·Р°РґР°С‡Рё СЂРѕСЃС‚Р°.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Неоклассическая модель экономического роста}\label{2sec:problem-formulation}
+\section{РќРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєР°СЏ РјРѕРґРµР»СЊ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р°}\label{2sec:problem-formulation}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Неоклассическая модель оптимального экономического роста описывает замкнутую агрегированную экономику, производящую в каждый момент времени $ t \ge 0$ 
-единственный однородный продукт (капитал) со скоростью $ Y(t)>0 $. В каждый момент времени $ t $ величина $ Y (t) $ является функцией текущих значений капитала $ K(t) > 0 $ и трудовых ресурсов $ L(t) > 0 $; трудовые ресурсы также предполагаются однородными. Таким образом, \\
+РќРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєР°СЏ РјРѕРґРµР»СЊ РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° РѕРїРёСЃС‹РІР°РµС‚ Р·Р°РјРєРЅСѓС‚СѓСЋ Р°РіСЂРµРіРёСЂРѕРІР°РЅРЅСѓСЋ СЌРєРѕРЅРѕРјРёРєСѓ, РїСЂРѕРёР·РІРѕРґСЏС‰СѓСЋ РІ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0$ 
+РµРґРёРЅСЃС‚РІРµРЅРЅС‹Р№ РѕРґРЅРѕСЂРѕРґРЅС‹Р№ РїСЂРѕРґСѓРєС‚ (РєР°РїРёС‚Р°Р») СЃРѕ СЃРєРѕСЂРѕСЃС‚СЊСЋ $ Y(t)>0 $. Р’ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t $ РІРµР»РёС‡РёРЅР° $ Y (t) $ СЏРІР»СЏРµС‚СЃСЏ С„СѓРЅРєС†РёРµР№ С‚РµРєСѓС‰РёС… Р·РЅР°С‡РµРЅРёР№ РєР°РїРёС‚Р°Р»Р° $ K(t) > 0 $ Рё С‚СЂСѓРґРѕРІС‹С… СЂРµСЃСѓСЂСЃРѕРІ $ L(t) > 0 $; С‚СЂСѓРґРѕРІС‹Рµ СЂРµСЃСѓСЂСЃС‹ С‚Р°РєР¶Рµ РїСЂРµРґРїРѕР»Р°РіР°СЋС‚СЃСЏ РѕРґРЅРѕСЂРѕРґРЅС‹РјРё. РўР°РєРёРј РѕР±СЂР°Р·РѕРј, \\
 \begin{equation}
-	 Y (t)=F(K(t),L(t)) \text{ для любого } t \ge 0. 
+Y (t)=F(K(t),L(t)) \text{ РґР»СЏ Р»СЋР±РѕРіРѕ } t \ge 0. 
 \end{equation}
-Функция $ F $ обычно называется производственной функцией. Относительно производственной функции $ F $ предполагается, что она определена и непрерывна на положительном квадранте \\
+Р¤СѓРЅРєС†РёСЏ $ F $ РѕР±С‹С‡РЅРѕ РЅР°Р·С‹РІР°РµС‚СЃСЏ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРµР№. РћС‚РЅРѕСЃРёС‚РµР»СЊРЅРѕ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ F $ РїСЂРµРґРїРѕР»Р°РіР°РµС‚СЃСЏ, С‡С‚Рѕ РѕРЅР° РѕРїСЂРµРґРµР»РµРЅР° Рё РЅРµРїСЂРµСЂС‹РІРЅР° РЅР° РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕРј РєРІР°РґСЂР°РЅС‚Рµ \\
 \begin{center}
 	$G ={(K,L) \in \mathbb{R}^2: K>0, L >0},$
 \end{center}
-дважды непрерывно дифференцируема и удовлетворяет следующим неоклассическим условиям 
-для всех K>0, L>0: \\
+РґРІР°Р¶РґС‹ РЅРµРїСЂРµСЂС‹РІРЅРѕ РґРёС„С„РµСЂРµРЅС†РёСЂСѓРµРјР° Рё СѓРґРѕРІР»РµС‚РІРѕСЂСЏРµС‚ СЃР»РµРґСѓСЋС‰РёРј РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРёРј СѓСЃР»РѕРІРёСЏРј 
+РґР»СЏ РІСЃРµС… K>0, L>0: \\
 \begin{equation}
-	 \dfrac{\partial F (K, L)}{\partial K} < 0 \hspace{2cm}  \dfrac{\partial^2 F (K, L)}{\partial K^2} < 0
-	\end{equation}
-	\begin{equation}
-	 \dfrac{\partial F (K, L)}{\partial L} < 0 \hspace{2cm}  \dfrac{\partial^2 F (K, L)}{\partial L^2} < 0
-	\end{equation}\\
-	\begin{equation}
-	\underset{K \rightarrow +0}{lim} \dfrac{\partial F (K, L)}{\partial K} = \infty \hspace{1cm} \underset{K \rightarrow \infty}{lim} \dfrac{\partial^2 F (K, L)}{\partial K^2} = 0
+\dfrac{\partial F (K, L)}{\partial K} < 0 \hspace{2cm}  \dfrac{\partial^2 F (K, L)}{\partial K^2} < 0
 \end{equation}
 \begin{equation}
-	\underset{L \rightarrow +0}{lim} \dfrac{\partial F (K, L)}{\partial L} = \infty \hspace{1cm} \underset{L \rightarrow \infty}{lim} \dfrac{\partial^2 F (K, L)}{\partial L^2} = 0
-\end{equation}
-Наконец, предполагается, что $ F $ положительно однородна первой степени, т.е. \\
+\dfrac{\partial F (K, L)}{\partial L} < 0 \hspace{2cm}  \dfrac{\partial^2 F (K, L)}{\partial L^2} < 0
+\end{equation}\\
 \begin{equation}
-          F(\lambda K,\lambda L)=\lambda F(K,L) \hspace{1cm} \text{для любых} \lambda>0, K > 0, L > 0
+\underset{K \rightarrow +0}{lim} \dfrac{\partial F (K, L)}{\partial K} = \infty \hspace{1cm} \underset{K \rightarrow \infty}{lim} \dfrac{\partial^2 F (K, L)}{\partial K^2} = 0
 \end{equation}
-Последнее условие означает, что объем производства в каждую единицу времени прямо пропорционален величинам имеющихся в эту единицу времени производственных факторов. В качестве производственной функции $ F $ может фигурировать, например, стандартная функция Кобба-Дугласа вида \\
+\begin{equation}
+\underset{L \rightarrow +0}{lim} \dfrac{\partial F (K, L)}{\partial L} = \infty \hspace{1cm} \underset{L \rightarrow \infty}{lim} \dfrac{\partial^2 F (K, L)}{\partial L^2} = 0
+\end{equation}
+РќР°РєРѕРЅРµС†, РїСЂРµРґРїРѕР»Р°РіР°РµС‚СЃСЏ, С‡С‚Рѕ $ F $ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕ РѕРґРЅРѕСЂРѕРґРЅР° РїРµСЂРІРѕР№ СЃС‚РµРїРµРЅРё, С‚.Рµ. \\
+\begin{equation}
+F(\lambda K,\lambda L)=\lambda F(K,L) \hspace{1cm} \text{РґР»СЏ Р»СЋР±С‹С…} \lambda>0, K > 0, L > 0
+\end{equation}
+РџРѕСЃР»РµРґРЅРµРµ СѓСЃР»РѕРІРёРµ РѕР·РЅР°С‡Р°РµС‚, С‡С‚Рѕ РѕР±СЉРµРј РїСЂРѕРёР·РІРѕРґСЃС‚РІР° РІ РєР°Р¶РґСѓСЋ РµРґРёРЅРёС†Сѓ РІСЂРµРјРµРЅРё РїСЂСЏРјРѕ РїСЂРѕРїРѕСЂС†РёРѕРЅР°Р»РµРЅ РІРµР»РёС‡РёРЅР°Рј РёРјРµСЋС‰РёС…СЃСЏ РІ СЌС‚Сѓ РµРґРёРЅРёС†Сѓ РІСЂРµРјРµРЅРё РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅС‹С… С„Р°РєС‚РѕСЂРѕРІ. Р’ РєР°С‡РµСЃС‚РІРµ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ F $ РјРѕР¶РµС‚ С„РёРіСѓСЂРёСЂРѕРІР°С‚СЊ, РЅР°РїСЂРёРјРµСЂ, СЃС‚Р°РЅРґР°СЂС‚РЅР°СЏ С„СѓРЅРєС†РёСЏ РљРѕР±Р±Р°-Р”СѓРіР»Р°СЃР° РІРёРґР° \\
 \begin{center}
 	$ F(K,L)=AK^{\alpha_1}L^{\alpha_2} $,
 \end{center}
-где $ A>0, \alpha_1 > 0, \alpha_2 > 0 $ и $ \alpha_1 + \alpha_2 =1 $ . \\
-Заметим, что в силу равенства (2.6) не все условия в (2.2)---(2.5) независимы. В частности, второе условие в (2.3) следует из второго условия в (2.2) и (2.6).
+РіРґРµ $ A>0, \alpha_1 > 0, \alpha_2 > 0 $ Рё $ \alpha_1 + \alpha_2 =1 $ . \\
+Р—Р°РјРµС‚РёРј, С‡С‚Рѕ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІР° (2.6) РЅРµ РІСЃРµ СѓСЃР»РѕРІРёСЏ РІ (2.2)---(2.5) РЅРµР·Р°РІРёСЃРёРјС‹. Р’ С‡Р°СЃС‚РЅРѕСЃС‚Рё, РІС‚РѕСЂРѕРµ СѓСЃР»РѕРІРёРµ РІ (2.3) СЃР»РµРґСѓРµС‚ РёР· РІС‚РѕСЂРѕРіРѕ СѓСЃР»РѕРІРёСЏ РІ (2.2) Рё (2.6).
 
-В замкнутой экономике произведенный продукт либо инвестируется в основные производственные фонды (капитал), либо потребляется. Предположим, что в каждый момент времени $ t \ge 0 $ минимально возможная часть потребляемого продукта есть $  \varepsilon Y (t) > 0 $, где $ 0 <\varepsilon<1 $ - некоторая постоянная, а доля продукта $ (1 - \varepsilon) Y (t) $ может быть распределена между производством и потреблением произвольным образом.
+Р’ Р·Р°РјРєРЅСѓС‚РѕР№ СЌРєРѕРЅРѕРјРёРєРµ РїСЂРѕРёР·РІРµРґРµРЅРЅС‹Р№ РїСЂРѕРґСѓРєС‚ Р»РёР±Рѕ РёРЅРІРµСЃС‚РёСЂСѓРµС‚СЃСЏ РІ РѕСЃРЅРѕРІРЅС‹Рµ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅС‹Рµ С„РѕРЅРґС‹ (РєР°РїРёС‚Р°Р»), Р»РёР±Рѕ РїРѕС‚СЂРµР±Р»СЏРµС‚СЃСЏ. РџСЂРµРґРїРѕР»РѕР¶РёРј, С‡С‚Рѕ РІ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ РјРёРЅРёРјР°Р»СЊРЅРѕ РІРѕР·РјРѕР¶РЅР°СЏ С‡Р°СЃС‚СЊ РїРѕС‚СЂРµР±Р»СЏРµРјРѕРіРѕ РїСЂРѕРґСѓРєС‚Р° РµСЃС‚СЊ $  \varepsilon Y (t) > 0 $, РіРґРµ $ 0 <\varepsilon<1 $ - РЅРµРєРѕС‚РѕСЂР°СЏ РїРѕСЃС‚РѕСЏРЅРЅР°СЏ, Р° РґРѕР»СЏ РїСЂРѕРґСѓРєС‚Р° $ (1 - \varepsilon) Y (t) $ РјРѕР¶РµС‚ Р±С‹С‚СЊ СЂР°СЃРїСЂРµРґРµР»РµРЅР° РјРµР¶РґСѓ РїСЂРѕРёР·РІРѕРґСЃС‚РІРѕРј Рё РїРѕС‚СЂРµР±Р»РµРЅРёРµРј РїСЂРѕРёР·РІРѕР»СЊРЅС‹Рј РѕР±СЂР°Р·РѕРј.
 
-Пусть в момент времени $ t \ge 0 $ часть \\
+РџСѓСЃС‚СЊ РІ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ С‡Р°СЃС‚СЊ \\
 \begin{equation}
-	I(t) = u(t)Y (t), 0 \ge u(t) \ge 1-\varepsilon, 
+I(t) = u(t)Y (t), 0 \ge u(t) \ge 1-\varepsilon, 
 \end{equation}
-произведенного продукта инвестируется в основные производственные фонды, а оставшаяся часть \\
+РїСЂРѕРёР·РІРµРґРµРЅРЅРѕРіРѕ РїСЂРѕРґСѓРєС‚Р° РёРЅРІРµСЃС‚РёСЂСѓРµС‚СЃСЏ РІ РѕСЃРЅРѕРІРЅС‹Рµ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅС‹Рµ С„РѕРЅРґС‹, Р° РѕСЃС‚Р°РІС€Р°СЏСЃСЏ С‡Р°СЃС‚СЊ \\
 \begin{equation}
-	C(t) = (1-u(t))Y (t) 
+C(t) = (1-u(t))Y (t) 
 \end{equation}
-потребляется. В дальнейшем величина $ u(t)\in[0,1-\varepsilon] $ будет трактоваться как значение управления в момент времени $ t $. 
+РїРѕС‚СЂРµР±Р»СЏРµС‚СЃСЏ. Р’ РґР°Р»СЊРЅРµР№С€РµРј РІРµР»РёС‡РёРЅР° $ u(t)\in[0,1-\varepsilon] $ Р±СѓРґРµС‚ С‚СЂР°РєС‚РѕРІР°С‚СЊСЃСЏ РєР°Рє Р·РЅР°С‡РµРЅРёРµ СѓРїСЂР°РІР»РµРЅРёСЏ РІ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t $. 
 
-В данной модели амортизации капитала не предполагается. Поэтому в силу равенства (2.7) динамика изменения капитала может быть описана при помощи следующего дифференциального уравнения: 
+Р’ РґР°РЅРЅРѕР№ РјРѕРґРµР»Рё Р°РјРѕСЂС‚РёР·Р°С†РёРё РєР°РїРёС‚Р°Р»Р° РЅРµ РїСЂРµРґРїРѕР»Р°РіР°РµС‚СЃСЏ. РџРѕСЌС‚РѕРјСѓ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІР° (2.7) РґРёРЅР°РјРёРєР° РёР·РјРµРЅРµРЅРёСЏ РєР°РїРёС‚Р°Р»Р° РјРѕР¶РµС‚ Р±С‹С‚СЊ РѕРїРёСЃР°РЅР° РїСЂРё РїРѕРјРѕС‰Рё СЃР»РµРґСѓСЋС‰РµРіРѕ РґРёС„С„РµСЂРµРЅС†РёР°Р»СЊРЅРѕРіРѕ СѓСЂР°РІРЅРµРЅРёСЏ: 
 \begin{equation}
-	\dot{K}(t)=I(t)=u(t)Y (t). 
+\dot{K}(t)=I(t)=u(t)Y (t). 
 \end{equation}
-Считаем, что в начальный момент времени $ K(0) = K_0 > 0.  $
+РЎС‡РёС‚Р°РµРј, С‡С‚Рѕ РІ РЅР°С‡Р°Р»СЊРЅС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ K(0) = K_0 > 0.  $
 
- Пусть трудовые ресурсы удовлетворяют условию экспоненциального роста, т.е. 
+РџСѓСЃС‚СЊ С‚СЂСѓРґРѕРІС‹Рµ СЂРµСЃСѓСЂСЃС‹ СѓРґРѕРІР»РµС‚РІРѕСЂСЏСЋС‚ СѓСЃР»РѕРІРёСЋ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅРѕРіРѕ СЂРѕСЃС‚Р°, С‚.Рµ. 
 \begin{equation}
-	\dot{L}(t)=\mu L(t),
+\dot{L}(t)=\mu L(t),
 \end{equation}
-где $ \mu>0 $ --- некоторая постоянная. Аналогично будем считать, что $ L(0) = L_0 > 0.  $\\
-Пусть $  \rho>0 $ - параметр дисконтирования и в каждый момент времени $ t \ge 0 $ мгновенная полезность $ g(K(t),L(t),u(t)) $ текущего процесса управления есть логарифм полного потребления $ C(t) $, т.е. (см. (2.1), (2.8))
+РіРґРµ $ \mu>0 $ --- РЅРµРєРѕС‚РѕСЂР°СЏ РїРѕСЃС‚РѕСЏРЅРЅР°СЏ. РђРЅР°Р»РѕРіРёС‡РЅРѕ Р±СѓРґРµРј СЃС‡РёС‚Р°С‚СЊ, С‡С‚Рѕ $ L(0) = L_0 > 0.  $\\
+РџСѓСЃС‚СЊ $  \rho>0 $ - РїР°СЂР°РјРµС‚СЂ РґРёСЃРєРѕРЅС‚РёСЂРѕРІР°РЅРёСЏ Рё РІ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ РјРіРЅРѕРІРµРЅРЅР°СЏ РїРѕР»РµР·РЅРѕСЃС‚СЊ $ g(K(t),L(t),u(t)) $ С‚РµРєСѓС‰РµРіРѕ РїСЂРѕС†РµСЃСЃР° СѓРїСЂР°РІР»РµРЅРёСЏ РµСЃС‚СЊ Р»РѕРіР°СЂРёС„Рј РїРѕР»РЅРѕРіРѕ РїРѕС‚СЂРµР±Р»РµРЅРёСЏ $ C(t) $, С‚.Рµ. (СЃРј. (2.1), (2.8))
 \begin{center}
-$ 	g(K(t),L(t),u(t)) = \ln C(t) = \ln (1-u(t))+\ln F(K(t),L(t)).  $
+	$ 	g(K(t),L(t),u(t)) = \ln C(t) = \ln (1-u(t))+\ln F(K(t),L(t)).  $
 \end{center} 
 
-\section{Задача оптимального управления для неоклассической модели экономики c логарифмической функцией мгновенной полезности}
-Неоклассическая модель оптимального экономического роста (c логарифмической функцией мгновенной полезности) формулируется в виде следующей задачи оптимального управления $ (P_\varepsilon), 0 <\varepsilon<1 $: 
+\section{Р—Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ РґР»СЏ РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРѕР№ РјРѕРґРµР»Рё СЌРєРѕРЅРѕРјРёРєРё c Р»РѕРіР°СЂРёС„РјРёС‡РµСЃРєРѕР№ С„СѓРЅРєС†РёРµР№ РјРіРЅРѕРІРµРЅРЅРѕР№ РїРѕР»РµР·РЅРѕСЃС‚Рё}
+РќРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєР°СЏ РјРѕРґРµР»СЊ РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° (c Р»РѕРіР°СЂРёС„РјРёС‡РµСЃРєРѕР№ С„СѓРЅРєС†РёРµР№ РјРіРЅРѕРІРµРЅРЅРѕР№ РїРѕР»РµР·РЅРѕСЃС‚Рё) С„РѕСЂРјСѓР»РёСЂСѓРµС‚СЃСЏ РІ РІРёРґРµ СЃР»РµРґСѓСЋС‰РµР№ Р·Р°РґР°С‡Рё РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ $ (P_\varepsilon), 0 <\varepsilon<1 $: 
 \begin{equation}
-	J(K,L,u)= \int_{0}^{\infty}
-	e^{-\rho t}[\ln(1-u(t))+\ln F(K(t),L(t))]dt \rightarrow \max.
+J(K,L,u)= \int_{0}^{\infty}
+e^{-\rho t}[\ln(1-u(t))+\ln F(K(t),L(t))]dt \rightarrow \max.
 \end{equation}
 \begin{center}
 	$ \dot{K}(t)=u(t)F(K(t),L(t)),\hspace{1cm} u(t)\in U_\varepsilon = [0 ,1-\varepsilon],  $\\
@@ -80,84 +80,102 @@ $ 	g(K(t),L(t),u(t)) = \ln C(t) = \ln (1-u(t))+\ln F(K(t),L(t)).  $
 	$ K(0) = K_0,L (0) = L_0, $
 \end{center} 
 
-При исследовании неоклассической задачи оптимального экономического роста обычно, используя условие однородности (2.6), понижают размерность системы и переходят к вспомогательной фазовой переменной $ x = K/L $ (величине капитала, приходящегося на единицу рабочей силы) и однофакторной производственной функции $ f $ вида $ f(x)=F(x,1) $, x>0. В этом случае в силу условий (2.1) и (2.6) для любого $ t \ge 0 $ 
+РџСЂРё РёСЃСЃР»РµРґРѕРІР°РЅРёРё РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРѕР№ Р·Р°РґР°С‡Рё РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° РѕР±С‹С‡РЅРѕ, РёСЃРїРѕР»СЊР·СѓСЏ СѓСЃР»РѕРІРёРµ РѕРґРЅРѕСЂРѕРґРЅРѕСЃС‚Рё (2.6), РїРѕРЅРёР¶Р°СЋС‚ СЂР°Р·РјРµСЂРЅРѕСЃС‚СЊ СЃРёСЃС‚РµРјС‹ Рё РїРµСЂРµС…РѕРґСЏС‚ Рє РІСЃРїРѕРјРѕРіР°С‚РµР»СЊРЅРѕР№ С„Р°Р·РѕРІРѕР№ РїРµСЂРµРјРµРЅРЅРѕР№ $ x = K/L $ (РІРµР»РёС‡РёРЅРµ РєР°РїРёС‚Р°Р»Р°, РїСЂРёС…РѕРґСЏС‰РµРіРѕСЃСЏ РЅР° РµРґРёРЅРёС†Сѓ СЂР°Р±РѕС‡РµР№ СЃРёР»С‹) Рё РѕРґРЅРѕС„Р°РєС‚РѕСЂРЅРѕР№ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ f $ РІРёРґР° $ f(x)=F(x,1) $, x>0. Р’ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ РІ СЃРёР»Сѓ СѓСЃР»РѕРІРёР№ (2.1) Рё (2.6) РґР»СЏ Р»СЋР±РѕРіРѕ $ t \ge 0 $ 
 \begin{center}
 	$ \dfrac{Y(t)}{L(t)}=
 	\dfrac{1}{L(t)}F(K(t),L(t)) = F \left(\dfrac{K(t)}{L(t)},1\right) = f(x(t)).
 	$
 \end{center} 
-Функция $ f $ определена и непрерывна на $\tilde{G} = (0 ,\infty$). В силу условий (2.2) для всех $ x>0  $
+Р¤СѓРЅРєС†РёСЏ $ f $ РѕРїСЂРµРґРµР»РµРЅР° Рё РЅРµРїСЂРµСЂС‹РІРЅР° РЅР° $\tilde{G} = (0 ,\infty$). Р’ СЃРёР»Сѓ СѓСЃР»РѕРІРёР№ (2.2) РґР»СЏ РІСЃРµС… $ x>0  $
 \begin{equation}
-	\frac{d}{dx}f(x) > 0, \hspace{1cm} \frac{d^2}{d^2x}f(x) < 0 
+\frac{d}{dx}f(x) > 0, \hspace{1cm} \frac{d^2}{d^2x}f(x) < 0 
 \end{equation}
-и вследствие (2.2)-(2.6)
+Рё РІСЃР»РµРґСЃС‚РІРёРµ (2.2)-(2.6)
 \begin{equation}
-	 \underset{x \rightarrow +0}{lim} f(x) = 0 \hspace{0.7cm} \underset{x \rightarrow \infty}{lim} f(x) = \infty \hspace{0.7cm} \underset{x \rightarrow +0}{lim} \frac{d}{dx} f(x) = \infty \hspace{0.7cm} \underset{x \rightarrow \infty}{lim} \frac{d}{dx} f(x) = 0
+\underset{x \rightarrow +0}{lim} f(x) = 0 \hspace{0.7cm} \underset{x \rightarrow \infty}{lim} f(x) = \infty \hspace{0.7cm} \underset{x \rightarrow +0}{lim} \frac{d}{dx} f(x) = \infty \hspace{0.7cm} \underset{x \rightarrow \infty}{lim} \frac{d}{dx} f(x) = 0
 \end{equation}
-Для переменной $ x(t)=K(t)/L(t) $ в силу равенств (2.9) и (2.10) имеем
+Р”Р»СЏ РїРµСЂРµРјРµРЅРЅРѕР№ $ x(t)=K(t)/L(t) $ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІ (2.9) Рё (2.10) РёРјРµРµРј
 \begin{center}
 	$ \dot{x}(t)=\dfrac{d}{dt}\dfrac{K(t)}{L(t)} = \dot{K}(t)\dfrac{1}{L(t)} - \dfrac{K(t)}{L^2(t)}\dot{L}(t) = u(t)\dfrac{Y(t)}{L(t)} - \mu \dfrac{K(t)}{L(t)} $
 \end{center}
-откуда в силу определения переменной $ x $ и условий (2.1) и (2.6) вытекает равенство
+РѕС‚РєСѓРґР° РІ СЃРёР»Сѓ РѕРїСЂРµРґРµР»РµРЅРёСЏ РїРµСЂРµРјРµРЅРЅРѕР№ $ x $ Рё СѓСЃР»РѕРІРёР№ (2.1) Рё (2.6) РІС‹С‚РµРєР°РµС‚ СЂР°РІРµРЅСЃС‚РІРѕ
 \begin{center}
 	$\dot{x}(t)=u(t)f(x(t))-\mu x(t).  $
 \end{center}
-Величина мгновенного потребления на единицу трудовых ресурсов в момент времени $ t \ge 0 $ есть $ c(t)=C(t)/L(t) $. Согласно (2.1) и (2.8) получаем 
+Р’РµР»РёС‡РёРЅР° РјРіРЅРѕРІРµРЅРЅРѕРіРѕ РїРѕС‚СЂРµР±Р»РµРЅРёСЏ РЅР° РµРґРёРЅРёС†Сѓ С‚СЂСѓРґРѕРІС‹С… СЂРµСЃСѓСЂСЃРѕРІ РІ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ РµСЃС‚СЊ $ c(t)=C(t)/L(t) $. РЎРѕРіР»Р°СЃРЅРѕ (2.1) Рё (2.8) РїРѕР»СѓС‡Р°РµРј 
 \begin{center}
 	$ c(t) = (1-u(t))\dfrac{Y(t)}{L(t)} = (1-u(t))f(x(t)).  $
 \end{center}
 
-Заметим, что в силу равенства (2.10) трудовые ресурсы $ L $ в рассматриваемой модели подчиняются заранее заданной динамике. Поэтому максимизация интегрального функционала (2.11) эквивалентна задаче максимизации функционала
+Р—Р°РјРµС‚РёРј, С‡С‚Рѕ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІР° (2.10) С‚СЂСѓРґРѕРІС‹Рµ СЂРµСЃСѓСЂСЃС‹ $ L $ РІ СЂР°СЃСЃРјР°С‚СЂРёРІР°РµРјРѕР№ РјРѕРґРµР»Рё РїРѕРґС‡РёРЅСЏСЋС‚СЃСЏ Р·Р°СЂР°РЅРµРµ Р·Р°РґР°РЅРЅРѕР№ РґРёРЅР°РјРёРєРµ. РџРѕСЌС‚РѕРјСѓ РјР°РєСЃРёРјРёР·Р°С†РёСЏ РёРЅС‚РµРіСЂР°Р»СЊРЅРѕРіРѕ С„СѓРЅРєС†РёРѕРЅР°Р»Р° (2.11) СЌРєРІРёРІР°Р»РµРЅС‚РЅР° Р·Р°РґР°С‡Рµ РјР°РєСЃРёРјРёР·Р°С†РёРё С„СѓРЅРєС†РёРѕРЅР°Р»Р°
 \begin{center}
 	$ J(x,u)= \int_{0}^{\infty}
 	e^{-\rho t} \ln c(t)dt =
 	\int_{0}^{\infty}
 	e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt,  $
 \end{center}
-характеризующего агрегированную удельную скорость роста потребления на единицу рабочей силы.
+С…Р°СЂР°РєС‚РµСЂРёР·СѓСЋС‰РµРіРѕ Р°РіСЂРµРіРёСЂРѕРІР°РЅРЅСѓСЋ СѓРґРµР»СЊРЅСѓСЋ СЃРєРѕСЂРѕСЃС‚СЊ СЂРѕСЃС‚Р° РїРѕС‚СЂРµР±Р»РµРЅРёСЏ РЅР° РµРґРёРЅРёС†Сѓ СЂР°Р±РѕС‡РµР№ СЃРёР»С‹.
 
-Пусть в задаче $ (P_\varepsilon) $ существует оптимальное допустимое управление $ u_* $. Тогда пусть $ (K_*,L_*) $ --- соответствующая управлению $ u_* $ допустимая траектория.
-В силу неоклассических условий (2.2)---(2.5) и положительности производственной функции $ F $ имеем 
+РџСѓСЃС‚СЊ РІ Р·Р°РґР°С‡Рµ $ (P_\varepsilon) $ СЃСѓС‰РµСЃС‚РІСѓРµС‚ РѕРїС‚РёРјР°Р»СЊРЅРѕРµ РґРѕРїСѓСЃС‚РёРјРѕРµ СѓРїСЂР°РІР»РµРЅРёРµ $ u_* $. РўРѕРіРґР° РїСѓСЃС‚СЊ $ (K_*,L_*) $ --- СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ СѓРїСЂР°РІР»РµРЅРёСЋ $ u_* $ РґРѕРїСѓСЃС‚РёРјР°СЏ С‚СЂР°РµРєС‚РѕСЂРёСЏ.
+Р’ СЃРёР»Сѓ РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРёС… СѓСЃР»РѕРІРёР№ (2.2)---(2.5) Рё РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕСЃС‚Рё РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ F $ РёРјРµРµРј 
 \begin{center}
-	$ \dfrac{\partial \ln F(R, L)}{\partial K} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial K} > 0$  для любых  $K>0, L > 0 $\\
-	$ \dfrac{\partial \ln F(R, L)}{\partial L} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial L} > 0$  для любых  $K>0, L > 0 $
+	$ \dfrac{\partial \ln F(R, L)}{\partial K} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial K} > 0$  РґР»СЏ Р»СЋР±С‹С…  $K>0, L > 0 $\\
+	$ \dfrac{\partial \ln F(R, L)}{\partial L} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial L} > 0$  РґР»СЏ Р»СЋР±С‹С…  $K>0, L > 0 $
 \end{center}
-Для вектора $ u_0 =1-\varepsilon \in U_\varepsilon $ правая часть управляемой системы в начальной точке $ (K_0,L_0) $ положительна. Если оптимальное управление $ u_* $ таково, что для некоторого положительного числа $ \theta $ начиная с некоторого момента времени $ \tau \ge 0 $ выполняется неравенство $ u_* (t) \ge \theta$, то для данного управления $ u_* $ выполняются следующие условия 
+Р”Р»СЏ РІРµРєС‚РѕСЂР° $ u_0 =1-\varepsilon \in U_\varepsilon $ РїСЂР°РІР°СЏ С‡Р°СЃС‚СЊ СѓРїСЂР°РІР»СЏРµРјРѕР№ СЃРёСЃС‚РµРјС‹ РІ РЅР°С‡Р°Р»СЊРЅРѕР№ С‚РѕС‡РєРµ $ (K_0,L_0) $ РїРѕР»РѕР¶РёС‚РµР»СЊРЅР°. Р’ С‚Р°РєРѕРј СЃР»СѓС‡Р°Рµ, РґР»СЏ Р·Р°РґР°С‡Рё $ (P_\varepsilon) $ РІС‹РїРѕР»РЅСЏРµС‚СЃСЏ С‚РµРѕСЂРµРјР° 10.1 РёР· РїСѓР±Р»РёРєР°С†РёРё РђСЃРµРµРІР° Рё РљСЂСЏР¶РёРјСЃРєРѕРіРѕ [3]. Рљ С‚РѕРјСѓ Р¶Рµ, РјРѕР¶РЅРѕ СѓС‚РІРµСЂР¶РґР°С‚СЊ, С‡С‚Рѕ РѕРїС‚РёРјР°Р»СЊРЅРѕРµ СѓРїСЂР°РІР»РµРЅРёРµ $ u_* $ С‚Р°РєРѕРІРѕ, С‡С‚Рѕ РґР»СЏ РЅРµРєРѕС‚РѕСЂРѕРіРѕ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕРіРѕ С‡РёСЃР»Р° $ \theta $ РЅР°С‡РёРЅР°СЏ СЃ РЅРµРєРѕС‚РѕСЂРѕРіРѕ РјРѕРјРµРЅС‚Р° РІСЂРµРјРµРЅРё $ \tau \ge 0 $ РІС‹РїРѕР»РЅСЏРµС‚СЃСЏ РЅРµСЂР°РІРµРЅСЃС‚РІРѕ $ u_* (t) \ge \theta$, С‚Рѕ РґР»СЏ РґР°РЅРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ $ u_* $ РІС‹РїРѕР»РЅСЏСЋС‚СЃСЏ СЃР»РµРґСѓСЋС‰РёРµ СѓСЃР»РѕРІРёСЏ 
 \begin{center}
-	$ x_*(t) \ge 0 $ для любого $ t \ge \tau $\\
-	$ \dfrac{\partial f(x_*(t),u_*(t))}{\partial x} - \theta I \ge 0 $ при почти всех $ t \ge \tau ,$
+	$ x_*(t) \ge 0 $ РґР»СЏ Р»СЋР±РѕРіРѕ $ t \ge \tau $\\
+	$ \dfrac{\partial f(x_*(t),u_*(t))}{\partial x} - \theta  I \ge 0 $ РїСЂРё РїРѕС‡С‚Рё РІСЃРµС… $ t \ge \tau ,$
 \end{center}
-где $ I^- (n\times n) $-единичная диагональная матрица. Тогда сопряженная переменная $ \psi  $, соответствующая оптимальной паре $ (x_*,u_*) $ удовлетворяет условию трансверсальности. Следовательно, в этом случае соответствующая оптимальной тройке $ (K_*,L_*,u_*) $ в силу принципа максимума в нормальной форме  сопряженная переменная $ \psi =( \psi^1,\psi^2) $ удовлетворяет условию трансверсальности. 
+РіРґРµ $ I^- (n\times n) $-РµРґРёРЅРёС‡РЅР°СЏ РґРёР°РіРѕРЅР°Р»СЊРЅР°СЏ РјР°С‚СЂРёС†Р°. РўРѕРіРґР° СЃРѕРїСЂСЏР¶РµРЅРЅР°СЏ РїРµСЂРµРјРµРЅРЅР°СЏ $ \psi  $, СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ РѕРїС‚РёРјР°Р»СЊРЅРѕР№ РїР°СЂРµ $ (x_*,u_*) $ СѓРґРѕРІР»РµС‚РІРѕСЂСЏРµС‚ СѓСЃР»РѕРІРёСЋ С‚СЂР°РЅСЃРІРµСЂСЃР°Р»СЊРЅРѕСЃС‚Рё. РЎР»РµРґРѕРІР°С‚РµР»СЊРЅРѕ, РІ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ РѕРїС‚РёРјР°Р»СЊРЅРѕР№ С‚СЂРѕР№РєРµ $ (K_*,L_*,u_*) $ РІ СЃРёР»Сѓ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РІ РЅРѕСЂРјР°Р»СЊРЅРѕР№ С„РѕСЂРјРµ  СЃРѕРїСЂСЏР¶РµРЅРЅР°СЏ РїРµСЂРµРјРµРЅРЅР°СЏ $ \psi =( \psi^1,\psi^2) $ СѓРґРѕРІР»РµС‚РІРѕСЂСЏРµС‚ СѓСЃР»РѕРІРёСЋ С‚СЂР°РЅСЃРІРµСЂСЃР°Р»СЊРЅРѕСЃС‚Рё. 
 
-Мы рассмотрим задачу $ (P_\varepsilon) $ при произвольном малом параметре $ \varepsilon>0 $. При этом будет показано, что для любого начального состояния $ (K_0,L_0) \in G $ в случае, когда параметр $ \varepsilon $ достаточно мал, значение этого параметра $ \varepsilon $ никакого влияния на оптимальную тройку $ (K_*,L_*,u_*) $ не оказывает.
+РСЃРїРѕР»СЊР·СѓСЏ С‚РµРѕСЂРµРјСѓ 10.1, Рѕ РєРѕС‚РѕСЂРѕР№ С€Р»Р° СЂРµС‡СЊ РІС‹С€Рµ, РІ РїСѓР±Р»РёРєР°С†РёРё [3] РІС‹РІРѕРґРёС‚СЃСЏ РІРёРґРѕРёР·РјРµРЅРµРЅРЅС‹Р№ РїСЂРёРЅС†РёРї РјР°РєСЃРёРјСѓРјР° РџРѕРЅС‚СЂСЏРіРёРЅР°. РћРЅ РґР°СЃС‚ РЅР°Рј СЃРѕРѕС‚РЅРѕС€РµРЅРёСЏ, РєРѕС‚РѕСЂС‹С… Р±СѓРґРµС‚ РІРїРѕР»РЅРµ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РґР»СЏ РѕРґРЅРѕР·РЅР°С‡РЅРѕР№ С…Р°СЂР°РєС‚РµСЂРёР·Р°С†РёРё РІСЃРµС… РѕРїС‚РёРјР°Р»СЊРЅС‹С… СЂРµР¶РёРјРѕРІ РІ Р·Р°РґР°С‡Рµ $ (P_\varepsilon) $. РњС‹ СЂР°СЃСЃРјРѕС‚СЂРёРј Р·Р°РґР°С‡Сѓ $ (P_\varepsilon) $ РїСЂРё РїСЂРѕРёР·РІРѕР»СЊРЅРѕРј РјР°Р»РѕРј РїР°СЂР°РјРµС‚СЂРµ $ \varepsilon>0 $. РџСЂРё СЌС‚РѕРј Р±СѓРґРµС‚ РїРѕРєР°Р·Р°РЅРѕ, С‡С‚Рѕ РґР»СЏ Р»СЋР±РѕРіРѕ РЅР°С‡Р°Р»СЊРЅРѕРіРѕ СЃРѕСЃС‚РѕСЏРЅРёСЏ $ (K_0,L_0) \in G $ РІ СЃР»СѓС‡Р°Рµ, РєРѕРіРґР° РїР°СЂР°РјРµС‚СЂ $ \varepsilon $ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РјР°Р», Р·РЅР°С‡РµРЅРёРµ СЌС‚РѕРіРѕ РїР°СЂР°РјРµС‚СЂР° $ \varepsilon $ РЅРёРєР°РєРѕРіРѕ РІР»РёСЏРЅРёСЏ РЅР° РѕРїС‚РёРјР°Р»СЊРЅСѓСЋ С‚СЂРѕР№РєСѓ $ (K_*,L_*,u_*) $ РЅРµ РѕРєР°Р·С‹РІР°РµС‚.
 
-Таким образом, в терминах фазовой переменной x задача оптимального управления ($P_\varepsilon$), $ 0 <\varepsilon<1 $, переписывается в виде следующей задачи ($\tilde{P}_\varepsilon$):
+РўР°РєРёРј РѕР±СЂР°Р·РѕРј, РІ С‚РµСЂРјРёРЅР°С… С„Р°Р·РѕРІРѕР№ РїРµСЂРµРјРµРЅРЅРѕР№ x Р·Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ ($P_\varepsilon$), $ 0 <\varepsilon<1 $, РїРµСЂРµРїРёСЃС‹РІР°РµС‚СЃСЏ РІ РІРёРґРµ СЃР»РµРґСѓСЋС‰РµР№ Р·Р°РґР°С‡Рё ($\tilde{P}_\varepsilon$):
 \begin{center}
-		$ J(x,u) = \int_{0}^{\infty}
+	$ J(x,u) = \int_{0}^{\infty}
 	e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max.$\\
 	$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
 \end{center}
-	\begin{equation}
-		x(0) = x_0,
-	\end{equation}
+\begin{equation}
+x(0) = x_0,
+\end{equation}
 
-Здесь $ x_0\in \tilde{G} = {x \in \mathbb{R}^1: x>0} $ и $ f(x)=F(x,1) $ для любого $ x \in \tilde{G}. $ Остальные данные в задаче $ (\tilde{P}_\varepsilon) $ те же самые, что и в задаче $ ( P_\varepsilon) $.\\
+Р—РґРµСЃСЊ $ x_0\in \tilde{G} = {x \in \mathbb{R}^1: x>0} $ Рё $ f(x)=F(x,1) $ РґР»СЏ Р»СЋР±РѕРіРѕ $ x \in \tilde{G}. $ РћСЃС‚Р°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ РІ Р·Р°РґР°С‡Рµ $ (\tilde{P}_\varepsilon) $ С‚Рµ Р¶Рµ СЃР°РјС‹Рµ, С‡С‚Рѕ Рё РІ Р·Р°РґР°С‡Рµ $ ( P_\varepsilon) $.\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Построение магистралей}\label{3sec:xxx}
-Магистралями мы называем равновесное положение экономической системы.
-В данной задаче равновесным положением мы считаем точку $ (\hat{x},\hat{p}) $ из следующей системы:\\
+\section{РџРѕСЃС‚СЂРѕРµРЅРёРµ РјР°РіРёСЃС‚СЂР°Р»РµР№}\label{3sec:xxx}
+РњР°РіРёСЃС‚СЂР°Р»СЊСЋ РјС‹ РЅР°Р·С‹РІР°РµРј СЂР°РІРЅРѕРІРµСЃРЅРѕРµ РїРѕР»РѕР¶РµРЅРёРµ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕР№ СЃРёСЃС‚РµРјС‹. Р”Р»СЏ РµС‘ РІ РґР°РЅРЅРѕР№ Р·Р°РґР°С‡Рµ РјС‹ РґРѕР»Р¶РЅС‹ РїРѕСЃС‚СЂРѕРёС‚СЊ РіР°РјРёР»СЊС‚РѕРЅРѕРІСѓ СЃРёСЃС‚РµРјСѓ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РґР»СЏ $ ( \~P_\varepsilon) $. 
+
+Р’ СЃРёР»Сѓ С‚РµРѕСЂРµРјС‹ 15.2 [3], РїСЂРµРґР»Р°РіР°СЋС‰РµР№ РЅР°Рј РµС‰Рµ РѕРґРёРЅ РІР°СЂРёР°РЅС‚ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РџРѕРЅС‚СЂСЏРіРёРЅР° РІ С‚РµСЂРјРёРЅР°С… СЃРѕРїСЂСЏР¶РµРЅРЅРѕР№ РїРµСЂРµРјРµРЅРЅРѕР№ $ p $, С‚РµРєСѓС‰РµР№ С„СѓРЅРєС†РёРё Р“Р°РјРёР»СЊС‚РѕРЅР°вЂ“
+РџРѕРЅС‚СЂСЏРіРёРЅР° $ \cal{M} $ Рё С‚РµРєСѓС‰РµРіРѕ РіР°РјРёР»СЊС‚РѕРЅРёР°РЅР° $ M $ РґР»СЏ Р»СЋР±РѕРіРѕ $ t \ge 0 $ РёРјРµРµРј $ p(t) > 0 $. РўР°Рє РєР°Рє РІСЃРµ РґРѕРїСѓСЃС‚РёРјС‹Рµ С‚СЂР°РµРєС‚РѕСЂРёРё $ x $
+СѓРїСЂР°РІР»СЏРµРјРѕР№ СЃРёСЃС‚РµРјС‹ $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $ РїРѕР»РѕР¶РёС‚РµР»СЊРЅС‹Рµ, С‚Рѕ Р»СЋР±Р°СЏ РїР°СЂР° $ (x_*,p) $, РіРґРµ $ x_* $ вЂ” РѕРїС‚РёРјР°Р»СЊРЅР°СЏ С‚СЂР°РµРєС‚РѕСЂРёСЏ РІ Р·Р°РґР°С‡Рµ $ ( \~P_\varepsilon) $, Р° $ p $ вЂ” СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ РµР№ С‚РµРєСѓС‰Р°СЏ СЃРѕРїСЂСЏР¶РµРЅРЅР°СЏ РїРµСЂРµРјРµРЅРЅР°СЏ, РїСЂРё
+РІСЃРµС… Р·РЅР°С‡РµРЅРёСЏС… $ t \ge 0 $ РїСЂРёРЅРёРјР°РµС‚ Р·РЅР°С‡РµРЅРёСЏ РІ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕРј РєРІР°РґСЂР°РЅС‚Рµ
+\begin{center}
+	$ Р“ = {(x,p) \in \mathbb{R}^2 : x > 0, p > 0.} $
+\end{center}
+
+РџРѕСЃС‚СЂРѕРёРј РіР°РјРёР»СЊС‚РѕРЅРѕРІСѓ СЃРёСЃС‚РµРјСѓ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РґР»СЏ Р·Р°РґР°С‡Рё (PОµ) РІ РѕС‚РєСЂС‹С‚РѕРј РјРЅРѕР¶РµСЃС‚РІРµ О“
+
+Р Р°Р·СЂРµС€Р°СЏ СѓСЃР»РѕРІРёРµ РјР°РєСЃРёРјСѓРјР° РѕС‚РЅРѕСЃРёС‚РµР»СЊРЅРѕ СѓРїСЂР°РІР»РµРЅРёСЏ u РІ РјРЅРѕР¶РµСЃС‚РІРµ О“, РїРѕР»СѓС‡Р°РµРј, С‡С‚Рѕ РјР°РєСЃРёРјСѓРј РІ С„СѓРЅС†РёРё Р“Р°РјРёР»СЊС‚РѕРЅР°-РџРѕРЅС‚СЂСЏРіРёРЅР° РґРѕСЃС‚РёРіР°РµС‚СЃСЏ РІ С‚РѕС‡РєРµ
+
+\begin{equation}
+u(x,p)=
+\end{equation}
+
+
+Р’ РґР°РЅРЅРѕР№ Р·Р°РґР°С‡Рµ СЂР°РІРЅРѕРІРµСЃРЅС‹Рј РїРѕР»РѕР¶РµРЅРёРµРј РјС‹ СЃС‡РёС‚Р°РµРј С‚РѕС‡РєСѓ $ (\hat{x},\hat{p}) $ РёР· СЃР»РµРґСѓСЋС‰РµР№ СЃРёСЃС‚РµРјС‹:\\
 \begin{center}
 	\includegraphics[width=10cm]{dugi}
 \end{center}
-где $ p $ --- сопряженная переменная.\\
-Данная точка является единственным положением равновесия гамильтоновой системы.
+РіРґРµ $ p $ --- СЃРѕРїСЂСЏР¶РµРЅРЅР°СЏ РїРµСЂРµРјРµРЅРЅР°СЏ.\\
+Р”Р°РЅРЅР°СЏ С‚РѕС‡РєР° СЏРІР»СЏРµС‚СЃСЏ РµРґРёРЅСЃС‚РІРµРЅРЅС‹Рј РїРѕР»РѕР¶РµРЅРёРµРј СЂР°РІРЅРѕРІРµСЃРёСЏ РіР°РјРёР»СЊС‚РѕРЅРѕРІРѕР№ СЃРёСЃС‚РµРјС‹.
 
-Переменную $ \hat{x} $ мы считаем по формуле
+РџРµСЂРµРјРµРЅРЅСѓСЋ $ \hat{x} $ РјС‹ СЃС‡РёС‚Р°РµРј РїРѕ С„РѕСЂРјСѓР»Рµ
 \begin{center}
-	 $ \dfrac{d}{dx}f(x) = \rho + \mu $, а $ \hat{p} = \dfrac{1}{f(\hat{x}) - \mu\hat{x}} $.
+	$ \dfrac{d}{dx}f(x) = \rho + \mu $, Р° $ \hat{p} = \dfrac{1}{f(\hat{x}) - \mu\hat{x}} $.
 \end{center}
-Чтобы перейти к определенным в предыдущем пункте  $ (x_*, u_*) $ воспользуемся следующими формулами:
+Р§С‚РѕР±С‹ РїРµСЂРµР№С‚Рё Рє РѕРїСЂРµРґРµР»РµРЅРЅС‹Рј РІ РїСЂРµРґС‹РґСѓС‰РµРј РїСѓРЅРєС‚Рµ  $ (x_*, u_*) $ РІРѕСЃРїРѕР»СЊР·СѓРµРјСЃСЏ СЃР»РµРґСѓСЋС‰РёРјРё С„РѕСЂРјСѓР»Р°РјРё:
 \begin{center}
 	$ x_*(t) \equiv x, u_*(t) =1 - \dfrac{1}{f(\hat{x})\hat{p}}$
 \end{center}
-Данные формулы будут использоваться для нахождения магистрали в третьей главе.
+Р”Р°РЅРЅС‹Рµ С„РѕСЂРјСѓР»С‹ Р±СѓРґСѓС‚ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ РґР»СЏ РЅР°С…РѕР¶РґРµРЅРёСЏ РјР°РіРёСЃС‚СЂР°Р»Рё РІ С‚СЂРµС‚СЊРµР№ РіР»Р°РІРµ.
