--- a/Курсач2.0/chapter2.tex
+++ b/Курсач2.0/chapter2.tex
@@ -143,39 +143,72 @@ x(0) = x_0,
 
 Здесь $ x_0\in \tilde{G} = {x \in \mathbb{R}^1: x>0} $ и $ f(x)=F(x,1) $ для любого $ x \in \tilde{G}. $ Остальные данные в задаче $ (\tilde{P}_\varepsilon) $ те же самые, что и в задаче $ ( P_\varepsilon) $.\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Построение магистралей}\label{3sec:xxx}
-Магистралью мы называем равновесное положение экономической системы. Для её в данной задаче мы должны построить гамильтонову систему принципа максимума для $ ( \~P_\varepsilon) $. 
+\section{Построение магистралей}
+Магистралью мы называем равновесное положение экономической системы. Для её в данной задаче мы должны построить гамильтонову систему принципа максимума для $(\tilde{P}_\varepsilon)$. 
 
 В силу теоремы 15.2 [3], предлагающей нам еще один вариант принципа максимума Понтрягина в терминах сопряженной переменной $ p $, текущей функции Гамильтона–
 Понтрягина $ \cal{M} $ и текущего гамильтониана $ M $ для любого $ t \ge 0 $ имеем $ p(t) > 0 $. Так как все допустимые траектории $ x $
-управляемой системы $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $ положительные, то любая пара $ (x_*,p) $, где $ x_* $ — оптимальная траектория в задаче $ ( \~P_\varepsilon) $, а $ p $ — соответствующая ей текущая сопряженная переменная, при
+управляемой системы $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $ положительные, то любая пара $ (x_*,p) $, где $ x_* $ — оптимальная траектория в задаче $ (\tilde{P}_\varepsilon) $, а $ p $ — соответствующая ей текущая сопряженная переменная, при
 всех значениях $ t \ge 0 $ принимает значения в положительном квадранте
 \begin{center}
-	$ Г = {(x,p) \in \mathbb{R}^2 : x > 0, p > 0.} $
+	Г$  = {(x,p) \in \mathbb{R}^2 : x > 0, p > 0.} $
 \end{center}
 
-Построим гамильтонову систему принципа максимума для задачи (Pε) в открытом множестве Γ
+Построим гамильтонову систему принципа максимума для задачи $(\tilde{P}_\varepsilon)$ в открытом множестве Г
 
-Разрешая условие максимума относительно управления u в множестве Γ, получаем, что максимум в фунции Гамильтона-Понтрягина достигается в точке
+Разрешая условие максимума относительно управления $ u $ в множестве Г, получаем, что максимум в фунции Гамильтона-Понтрягина достигается в точке
+\begin{equation*}
+u(x,p)= 
+\begin{cases}
+0, если 0 < p < \dfrac{1}{f(x)},\\
+1 - \dfrac{1}{f(x)p}, если \dfrac{1}{f(x)} \le p \le \dfrac{1}{\varepsilon f(x)},\\
+1 - \varepsilon, если p > \dfrac{1}{\varepsilon f(x)},
+\end{cases}
+\end{equation*}
+и всюду в множестве Г имеем
+\begin{center}
+	$ M(x,p)=(u(x,p)f(x) - \mu x) p + \ln(1 - u(x,p)) + \ln f(x). $
+\end{center}
 
+В соответствии с вышеуказанным условаием определим множества Г$_1$, Г$_2$ и Г$_3$:
+\begin{center}
+Г$_1 = {(x,p)\in} $Г$: 0 < p < \dfrac{1}{f(x)} $, Г$_2 = {(x,p)\in} $Г$: \dfrac{1}{f(x)} \le p \ge \dfrac{1}{\varepsilon f(x)} $,\\
+Г$_3 = {(x,p)\in} $Г$: p > \dfrac{1}{\varepsilon f(x)} $
+\end{center}
+
+Логично, что Г = Г$_1 \cup $Г$_2 \cup $Г$_3$
+
+В множестве Г$_1$ гамильтонова система принципа максимума имеет вид
 \begin{equation}
-u(x,p)=
+\dot{x} = -\mu x(t),\\
+\dot{p}(t)=(\rho + \mu)p(t) - \dfrac{1}{f(x(t))} \dfrac{d}{dx}f(x(t)).
+\end{equation}
+Таким образом, в множестве Г$_1$ положений равновесия у гамильтоновой системыпринципа
+максимума нет. Все ее траектории имеют в этом множестве экспоненциально убывающую
+координату $ x $.
+Определим функцию $ y_1 : (0,\infty) \rightarrow \mathbb{R}^1  $ равенством
+\begin{center}
+$ y_1(x)=\dfrac{1}{(\rho + \mu)f(x)} \dfrac{d}{dx}f(x) $  для любого  $ x > 0 $.
+\end{center}
+В силу неоклассических условий функция $ y_1 $ монотонно убывает,
+\begin{center}
+$ y_1(x) \rightarrow \infty $ при $ x \rightarrow 0  $и $ y_1(x) \rightarrow 0 $ при $ x \rightarrow \infty $,
+\end{center}
+а равенство $ y1(x)=1/f(x) $ выполняется в единственной точке $ \hat{x} $, являющейся корнем уравнения
+\begin{equation}
+\dfrac{d}{dx}f(x) = \rho + \mu
 \end{equation}
 
-
-В данной задаче равновесным положением мы считаем точку $ (\hat{x},\hat{p}) $ из следующей системы:\\
+Определив кривые $ V^0_{12}, V^0_{21}, V^0_{22}, V^0_{31}, V^0_{32} $, а так же множества, на которые они разбивают Г$_1$, Г$_2$ и Г$_3$, мы можем построить характер поведения траекторий гамильтоновой системы принципа максимума Понтрягина для задачи  $ (\tilde{P}_\varepsilon) $ [3]:
 \begin{center}
 	\includegraphics[width=10cm]{dugi}
 \end{center}
-где $ p $ --- сопряженная переменная.\\
-Данная точка является единственным положением равновесия гамильтоновой системы.
 
-Переменную $ \hat{x} $ мы считаем по формуле
-\begin{center}
-	$ \dfrac{d}{dx}f(x) = \rho + \mu $, а $ \hat{p} = \dfrac{1}{f(\hat{x}) - \mu\hat{x}} $.
-\end{center}
+Точка $ (\hat{x}, \hat{p}) $ будет считаться равновесной в данной системе и пренадлежать множеству Г$_2$, т.к. все траектории Г$_1$ имеют экспоненциальную убывающую координату $ x $ (см. расчеты выше), а во множестве Г$_3$ прямая $  V^0_{31} $ и кривая $ V^0_{32} $ не пересекаются (см. рис.).
+
+Соответственно, используя (2.16) для рассчета $ \hat{x} $ и формулу  $ \hat{p} = \dfrac{1}{f(\hat{x}) - \mu\hat{x}} $ мы получаем нашу точку $ (\hat{x}, \hat{p}) $.
 Чтобы перейти к определенным в предыдущем пункте  $ (x_*, u_*) $ воспользуемся следующими формулами:
 \begin{center}
 	$ x_*(t) \equiv x, u_*(t) =1 - \dfrac{1}{f(\hat{x})\hat{p}}$
 \end{center}
-Данные формулы будут использоваться для нахождения магистрали в третьей главе.
+К ним переходим в силу следствия 15.2 [3], по которому положение равновесия $ (\hat{x}, \hat{p}) $  соответствует оптимальной стационарной траектории с начальным условием $ x_0 = \hat{x} $ для управляемой системы $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon] $ из задачи $(\tilde{P}_\varepsilon)$.
